# neiro_om

./: .gitignore  Cargo.toml  GOOD_TEST_PRE  README.md  b_river_0.txt  b_river_1.txt  b_river_10.txt  b_river_2.txt  b_river_3.txt  b_river_4.txt  b_river_5.txt  b_river_6.txt  b_river_7.txt  b_river_8.txt  b_river_9.txt  fake_preflop_explain.txt  fakeboard_ranks_river.txt  fakeboard_suits_river.txt  last_check_pre_and_flop.txt  preflop_action_calc.rs  top_samples.txt
src/: action.rs  eval_hand.rs  eval_result.rs  inline.rs  lib.rs  main.rs  redis.rs  strategy.rs
src/hand/: fake_abstract_cards.rs  mod.rs  real_abstract_cards.rs
src/inline/: fakeboard.rs
src/player/: mod.rs
src/postflop_game/: eval_fake_hand.rs  fake_postflop.rs  fake_postflop_new.rs  flop.rs  mod.rs
src/postflop_game/eval_fake_hand/: tests_eval.rs
src/postflop_game/flop/: tests_flop.rs
src/preflop_game/: fake_preflop.rs  mod.rs  preflop.rs
