[package]
name = "neiro_om"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rust_decimal = "1.30"
rust_decimal_macros = "1.30"
redis = { version = "0.25.2", features = ["streams"] }
lazy_static = "1.4.0"
clap = { version = "4.5.22", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
